@@ -29,9 +29,9 @@
 </addon>
 
 <addon id="plugin.video.filmibynaturex" name="Filmi BY NATURE"
-	version="2.5.1" provider-name="AJ">
+	version="2.5.2" provider-name="AJ">
 	<requires>
-		<import addon="xbmc.python" version="2.0" />
+		<import addon="xbmc.python" version="2.1.0" />
 		<import addon="script.module.simplejson" version="2.0.10" />
 		<import addon="script.module.beautifulsoup" version="3.2.0" />
 		<import addon="script.module.turtlex"  version="1.7.8" />
@@ -91,10 +91,10 @@
 	</extension>
 </addon>
 
-<addon id="plugin.video.willowtvx" name="Willow TV" version="2.2.6"
+<addon id="plugin.video.willowtvx" name="Willow TV" version="2.2.7"
 	provider-name="AJ">
 	<requires>
-		<import addon="xbmc.python" version="2.0" />
+		<import addon="xbmc.python" version="2.1.0" />
 		<import addon="script.module.simplejson" version="2.0.10" />
 		<import addon="script.module.beautifulsoup" version="3.2.0" />
 		<import addon="script.module.turtlex" version="1.6.1"/>
