@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<addon id="plugin.video.willowtvx" name="Willow TV" version="2.2.6"
+<addon id="plugin.video.willowtvx" name="Willow TV" version="2.2.7"
 	provider-name="AJ">
 	<requires>
-		<import addon="xbmc.python" version="2.0" />
+		<import addon="xbmc.python" version="2.1.0" />
 		<import addon="script.module.simplejson" version="2.0.10" />
 		<import addon="script.module.beautifulsoup" version="3.2.0" />
 		<import addon="script.module.turtlex" version="1.6.1"/>
