@@ -1,3 +1,6 @@
+[B]Version v2.2.7[/B]
+- Updated python version to support Gotham.
+
 [B]Version v2.2.4 - v2.2.5[/B]
 - Added Google Analytics parameters.
 
