@@ -1,3 +1,6 @@
+[B]Version v2.5.2[/B]
+- Updated python version to support Gotham.
+
 [B]Version v2.5.1[/B]
 - Again change in website & fixed stream resolver.
 
